[tool.poetry]
name = "testcontainers-orm"
version = "0.0.0"
description = "ORM integrations for testcontainers"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
readme = "README.md"
homepage = "https://github.com/droserasprout/testcontainers-orm"
repository = "https://github.com/droserasprout/testcontainers-orm"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Typing :: Typed"
]
packages = [
    { include = "testcontainers_orm", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
testcontainers = "^3.1.0"
typing-inspect = "^0.6.0"

# extra: sqlalchemy
pymysql = {version = "^0.9", optional = true}
sqlalchemy = {version = "^1.3.20", optional = true}
sqlalchemy-repr = {version = "^0.0.2", optional = true}
sqlalchemy-stubs = {version = "^0.4", optional = true}

# extras: tortoise
aiomysql = {version = "0.0.20", optional = true}
tortoise-orm = { version = "^0.16.17", optional = true }

# extras: redis
redis = { version = "^3.5.3", optional = true }

# extras: alembic
alembic = { version = "^1.4.3", optional = true }

[tool.poetry.dev-dependencies]
bump2version = "^1.0"
coverage = "^5.1"
isort = {version = "^4.3", extras = ["pyproject"]}
mypy = "0.*"
nose = "^1.3"
nose-timer = "^1.0"
pylint = "^2.6.0"
pylint-exit = "^1.2.0"
black = "^20.8b1"

[tool.poetry.extras]
sqlalchemy = ["pymysql", "sqlalchemy", "sqlalchemy-repr", "sqlalchemy-stubs"]
tortoise = ["aiomysql", "tortoise-orm"]
redis = ["redis"]
alembic = ["alembic"]

[tool.nosetests]
verbosity = 2

[tool.isort]
force_single_line = true
line_length = 140

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
